# appointment_backend

./: .gitignore  alembic.ini  pyproject.toml
app/: common.py  config.py  exceptions.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_08_02_2358-622d80ce8db7_initial.py
app/api/v1/: __init__.py
app/api/v1/auth/: dependencies.py  endpoints.py  helpers.py  schemas.py  token.py
app/api/v1/doctors/: endpoints.py
app/api/v1/patients/: endpoints.py  schemas.py
app/api/v1/users/: endpoints.py  schemas.py
app/database/: __init__.py  base.py  dependencies.py  models.py
app/database/repositories/: abstract.py  patient.py  user.py
